# mipt-patterns-2021

./: .README.md.swo  .README.md.swp  CMakeLists.txt  README.md  constants.h  main.cpp
Game/: Field.h  Game.cpp
Game/Commands/: Command.h  CreateArcherCommand.cpp  CreateArcherCommand.h  CreateWarriorCommand.cpp  CreateWarriorCommand.h
UnitGroups/: Army.cpp  Army.h  Economy.cpp  Economy.h  UnitsGroup.cpp  UnitsGroup.h
Units/: Archer.cpp  Archer.h  GermanArcher.cpp  GermanArcher.h  GermanWarrior.cpp  GermanWarrior.h  RussianArcher.cpp  RussianArcher.h  RussianWarrior.cpp  RussianWarrior.h  Unit.h  Warrior.cpp  Warrior.h
UnitsFactory/: GermanUnitsFactory.cpp  GermanUnitsFactory.h  RussianUnitsFactory.cpp  RussianUnitsFactory.h  UnitsFactory.cpp  UnitsFactory.h
